<resources>
    <string name="app_name">GameTetris</string>
    <string name="novo_jogo1">Novo Jogo</string>
    <string name="continuar">Continuar</string>
    <string name="configurar">Configuração</string>
    <string name="pontuacao">Pontuação: 0000</string>
    <string name="recorde">Recorde: 0000</string>
    <string name="novo_recorde">Novo Recorde</string>
    <string name="novo_jogo2">Novo Jogo</string>
    <string name="sair">Sair</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="v">V</string>
    <string name="g">Girar</string>
    <string name="pontuacaomain">Pontuação:</string>
    <string name="escolha_a_dificuldade_do_jogo">Escolha a dificuldade do jogo:</string>
    <string name="f_cil">Fácil</string>
    <string name="m_dio">Médio</string>
    <string name="dif_cil">Difícil</string>
    <string name="confirmar">CONFIRMAR</string>
</resources>
