<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnConfirmar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="10dp"
    tools:context=".ConfigGame">

    <ImageView
        android:id="@+id/logoconfig"
        android:layout_width="231dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_margin="10dp"
        android:text="@string/escolha_a_dificuldade_do_jogo"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/radioFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_cil" />

        <RadioButton
            android:id="@+id/radioMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_dio" />

        <RadioButton
            android:id="@+id/radioDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dif_cil" />

    </RadioGroup>

    <Button
        android:id="@+id/btConfirme"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#4BC74B"
        android:padding="10dp"
        android:text="@string/confirmar" />
</LinearLayout>